blue9 is now 20% lighter fixed the horizontal scroll to be less broke before javascript is applied.

--- a/sites/all/themes/laporteLibrary/assets/less/footer.less
+++ b/sites/all/themes/laporteLibrary/assets/less/footer.less
@@ -1,6 +1,6 @@
 footer {
   width:100%;
-  background:@colorBlue9;
+  background:lighten(@colorBlue9,20%);
   .region-pagelinks{
     display: flex;
     flex-flow: row;
@@ -20,7 +20,7 @@ footer {
   }
   h3{
     font-size:1.8em;
-    color:@colorLight60;
+    color:@colorDark;
   }
   #pageLinks {
    .region div{
