--- a/sites/all/themes/laporteLibrary/assets/less/frontPage.less
+++ b/sites/all/themes/laporteLibrary/assets/less/frontPage.less
@@ -175,8 +175,9 @@
   }
 }
  
-  
 .view-newest-items-slider{
+  height:120px;
+  overflow:hidden;
   .newestSlideWrapper{
     height:auto;
     overflow:auto;
