--- a/sites/all/themes/laporteLibrary/assets/less/header.less
+++ b/sites/all/themes/laporteLibrary/assets/less/header.less
@@ -68,8 +68,9 @@ nav{position:relative;}
   }
 }
 .colorWave{
-  background:@colorBlue9;
-  height:.5em;
+  //background:@colorBlue9;
+  background:lighten(@colorBlue9,20%);
+  height:.5rem;
   width:100%;
 }
 header{
